  -------------- REMINDER PLEASE KEEP ON TOP UNTIL RELEASE----------------
  !     remember to do SO_CURRENT++ and SO_AGE++ before next release     !
  ------------------------------------------------------------------------

2008/07/29: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added module GWEN_SEMAPHORE (as needed by one of my projects)


2008/07/15: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added modules GWEN_MUTEX and GWEN_MEMCACHE


2008/07/11: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added function GWEN_MsgEngine_FindNodeByPropertyStrictProto() which
  requires strict protocol matching when searching for a node. This function
  is needed to make sure that only the node for the current protocol is
  returned.


===========================================================================
MARK: released gwenhywfar-3.3.5 (2008/07/8)
===========================================================================

2008/07/03: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added check for default hard limit of GWEN_BUFFERs


===========================================================================
MARK: released gwenhywfar-3.3.4 (2008/06/11)
===========================================================================

2008/06/11: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- always ask for the pin if the CONFIRM flag is set


2008/06/10: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- added function GWEN_CryptKeyRsa_GetSecretExponent()
- removed unneeded code from src/crypt3/padd.c
- added gct-tool command "changepin"


2008/06/09: Martin Preuss<martin@libchipcard.de>
------------------------------------------------
- fixed a bug in CSV exporter (note: GWEN_FASTBUFFER_WRITEBYTES only writes